# langchain-study

./: .gitignore  env.ini  pyproject.toml  test.py
document_split/: split-md.py  split_by_length.py  split_json.py
embedding/: batch_embedding.py  embedding_docs.py  embedding_single_file.py  search_embedding_group.py  test_embedding.py
files/: embedding-demo.txt  大模型文档.md  电力运营管控测试环境服务器.csv  集团智慧双碳管理系统_系统实施安装手册.doc  集团智慧双碳管理系统_系统实施安装手册.docx  集团智慧双碳管理系统_运维手册.docx
files/集团电力产业运营监控系统/: problem-info.txt  一体化运维平台APM测试环境使用手册.docx  代码库.txt  双碳系统非用户账号清单.xlsx  电力运营-大屏-应急演练.docx  电力运营堡垒机账户授权申请_杨鹏伟.xlsx  集团电力产业运营监控系统-应用系统信息采集表.xls  集团电力产业运营监控系统实施安装手册.docx  集团电力运营管控系统_运维移交检查单.xlsx
files/集团电力产业运营监控系统/集团电力产业运营管控系统应急演练/集团电力产业运营管控系统/: 集团电力产业运营管控系统演练总结v1.docx  集团电力产业运营管控系统演练操作记录v1.docx  集团电力产业运营管控系统演练方案v1.docx
loaders/: load_csv.py  pdf_loader1.py  pdf_loader2.py  selfDefineLoader.py  web-loader.py
utils/: milvus_utils.py
