[project]
name = "langchain-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docx2txt>=0.9",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "markdown>=3.10.2",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymilvus>=3.0.0",
    "pypdf>=6.13.0",
    "pypinyin>=0.55.0",
    "python-docx>=1.2.0",
    "sniffio>=1.3.1",
    "tiktoken>=0.13.0",
    "unstructured>=0.22.31",
    "xlrd>=2.0.2",
    "zhipuai>=2.1.5.20250825",
]
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
