[project]
name = "langchain-study-main"
version = "0.1.0"
description = "LangChain study project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docx2txt>=0.9",
    "langchain>=1.3.6",
    "langchain-community>=0.4.2",
    "langchain-experimental>=0.4.2",
    "langchain-openai>=1.3.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymilvus>=3.0.0",
    "pypinyin>=0.55.0",
    "python-docx>=1.2.0",
    "xlrd>=2.0.2",
    "zhipuai>=2.1.5.20250825",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # 空列表表示不发现任何包
